packages/ibm-products/src/components/Card/next/_storybook-styles.scss
//
// Copyright IBM Corp. 2026
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

@use '@carbon/react/scss/spacing';
@use 'ALIAS_STORY_STYLE_CONFIG' as c4p-settings;

$block-class: #{c4p-settings.$pkg-prefix}--card-next;

#storybook-root {
  padding-block-start: spacing.$spacing-07; // 2rem
}

// Storybook demo styles for CardMedia content
// These styles are for demonstration purposes only and show how adopters
// should style their content inside CardMedia to fill the AspectRatio container
.#{$block-class}__media {
  // Make any direct child div fill the AspectRatio container
  // This works with inline styles that have width/height 100%
  > div {
    position: absolute;
    inset: 0;
  }
}

// Storybook demo styles for pictogram in icon slot
.icon-slot-pictogram {
  block-size: spacing.$spacing-09; // 48px
  inline-size: spacing.$spacing-09; // 48px
}

// Storybook demo styles for paragraph spacing in CardBody
.#{$block-class}__body {
  p {
    margin-block-start: spacing.$spacing-05;
  }
}

